change ticket to tickets

--- a/tickets.html
+++ b/tickets.html
@@ -4,7 +4,7 @@
         <script>
             localStorage.removeItem('ticket');
             localStorage.removeItem('tclicked');
-            window.location.replace(window.location.href.replace('ticket.html', 'index.html'))
+            window.location.replace(window.location.href.replace('tickets.html', 'index.html'))
         </script>
     </head>
 </html>
